# mcp-js

./: .dockerignore  .gitignore  .lychee.toml  Cargo.toml  Cross.toml  DOCKER.md  Dockerfile  Dockerfile.opa  EMBEDDED_NODE_DESIGN.md  IN_MEMORY_STORAGE.md  MEMORY_HEAP_STORAGE.md  OAUTH_TESTING.md  README-nix.md  README.md  SECURITY_FINDINGS.md  architecture.md  default.nix  docker-compose.cluster-stateless.yml  docker-compose.cluster.yml  docker-compose.module-policy.yml  docker-compose.oauth.yml  docker-compose.secure-sessions.yml  docker-compose.single-node-stateful.yml  docker-compose.single-node.yml  docker-compose.temporal.yml  docker-compose.yml  docker.nix  flake.nix  install-cli.sh  install.sh  mkdocs.yml  notes.md  openapi.json  shell.nix  test.sh
.cursor/: mcp.json
.github/workflows/: cli-e2e.yml  deploy-docs.yml  docker-compose-integration.yml  docker-publish.yml  docs-check.yml  docs-links.yml  fuzz.yml  keycloak-integration.yml  large-file-test.yml  load-test.yml  mcp-e2e.yml  module-policy-integration.yml  nixos-integration-test.yml  nixos-load-balancing-test.yml  openapi-drift.yml  publish-client.yml  release.yml  smoke-test.yml  sqlite-wasm-e2e.yml  test.yml
client/: Cargo.toml
client/src/: main.rs
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
docs/: filesystem-explainer.md  http-api-and-client.md  index.md  swebench-guide.md
docs/explanation/: architecture.md
docs/how-to/: run-javascript.md
docs/plans/: 2025-10-16-sse-transport.md
docs/reference/: api.md
docs/tutorials/: getting-started.md
examples/codex-app-server/: README.md  driver.js
examples/sqlite-wasm/: build.sh  example.js  memvfs.c
keycloak/: mcp-realm.json  realm.json
loadtest/: generate-report.sh  k6-load-test.js  run-local.sh
mcp-v8-client/: Cargo.toml  README.md  openapi.json
mcp-v8-client/src/: lib.rs  main.rs
mcp-v8-client/tests/: cli_e2e.rs
nix/: fetch-cargo-vendor-util-v2.py  fetch-cargo-vendor-util.py  fetch-cargo-vendor.nix  module.nix  replace-workspace-values.py  sqlite-wasm.nix
policies/: codex-app-server.rego  fetch.rego  fetch_allow_all.rego  filesystem.rego  filesystem_allow_all.rego  fs.rego  mcp_tools.rego  modules.rego  subprocess.rego
scripts/: check_docs_browser.py  generate_http_api_reference.py  oauth-client-credentials-provider.ts  test-keycloak-fetch-injection.ts  test-keycloak-sessions.ts  test-secure-sessions.ts
server/: Cargo.toml  HEAP_STORAGE.md  README.md  build.rs  deno.json  main.ts
server/cli-derive/: Cargo.toml
server/cli-derive/src/: lib.rs
server/examples/: custom_functions.rs
server/fuzz/: Cargo.toml  lsan_suppressions.txt
server/fuzz/corpus/fuzz_fetch_operations/: invalid_url  local_path
server/fuzz/corpus/fuzz_fs_operations/: mkdir  path_traversal  readfile  writefile
server/fuzz/corpus/fuzz_module_resolution/: npm_package  url_import
server/fuzz/fuzz_targets/: fuzz_execute_stateful.rs  fuzz_execute_stateless.rs  fuzz_fetch_operations.rs  fuzz_fs_operations.rs  fuzz_module_resolution.rs  fuzz_parameter_validation.rs  fuzz_snapshot_deserialization.rs  fuzz_wasm_compile.rs
server/src/: api.rs  cli.rs  cluster.rs  custom_functions.rs  embed.rs  fetch_headers.rs  lib.rs  llms_txt.md  main.rs  mcp.rs  mcp_dispatch.rs  mcp_sse.rs  mcp_tasks.rs  oauth.rs  run_js_tool_description.md  run_js_tool_fs_only.md  run_js_tool_secure.md  run_js_tool_stateless.md  run_pipeline_tool_description.md  run_pipeline_tool_stateless.md  session.rs  temporal_tasks.rs  v8.rs
server/src/engine/: buffer_store.rs  compression.rs  console.rs  execution.rs  fetch.rs  fetch_auth.rs  fs.rs  fs_chunker.rs  fs_content_merge.rs  fs_gc.rs  fs_labels.rs  fs_merge.rs  fs_mount.rs  fs_store.rs  fs_tree.rs  heap_storage.rs  heap_tags.rs  mcp_client.rs  mod.rs  module_loader.rs  opa.rs  run_js_file.rs  session_log.rs  streamable_http_client.rs  subprocess.rs  timers.rs  wasm_host.rs  wasm_stub.rs
server/src/mcp/: heap_storage.rs  mod.rs  resource_storage.rs  session_log.rs
server/src/raft/: gc.rs  mod.rs  store.rs  types.rs
server/tests/: README.md  base64_and_formdata.rs  cli_endpoints_e2e.rs  cluster_learner.rs  cluster_simulation.rs  cluster_write_forwarding.rs  compression.rs  console_log_e2e.rs  custom_functions_test.rs  exec_upload_e2e.rs  fetch_header_injection.rs  fs_cache_bench.rs  fs_cluster.rs  fs_content_merge.rs  fs_gc.rs  fs_labels.rs  fs_labels_engine.rs  fs_labels_stress.rs  fs_large_file.rs  fs_merge.rs  fs_merge_engine.rs  fs_merge_tree.rs  fs_mount_overlay.rs  fs_node_compat.rs  fs_ops.rs  fs_snapshot_e2e.rs  fs_snapshot_store.rs  fs_tree.rs  heap_limit.rs  heap_persistence_integration.rs  heap_persistence_integration_README.md  heap_tags.rs  http_e2e.rs  http_integration.rs  local_opa_policy.rs  mcp_server_auth.rs  mcp_stub_e2e.rs  module_imports.rs  module_policy_e2e.rs  parameter_configs.rs  (+18 more)
server/tests/common/: mod.rs
server/typescript-axios-client-generated/: api.ts  base.ts  configuration.ts  index.ts
server/typescript-axios-client-generated/apis/: default-api.ts
server/typescript-axios-client-generated/models/: index.ts  java-script-input.ts  java-script-output.ts  log-input.ts  log-output.ts
site/: 404.html  index.html  sitemap.xml
site-docs/: index.md  mkdocs.yml
site-docs/concepts/: async-execution.md  authentication.md  clustering.md  console-output.md  fetch.md  (+28 more)
snapshot/: Cargo.toml
specs/: .gitignore  FsLabelAtomicWrite.tla  FsLabelAtomicWrite_combined.cfg  FsLabelAtomicWrite_split.cfg  README.md
src/: main.rs
temporal_worker/: Dockerfile  requirements.txt  worker.py
tests/: cli-e2e.sh  common.rs  docker-compose-integration.sh  module-policy-integration.sh  runjs-edge-cases.test.js  stdio_e2e.rs
tutorials/: github-api-token-injection.md  mcp-tool-calling-tutorial.md  mcp_server_agent_loop.py  mcpjs_agent_loop.py  oauth-client-credentials-fetch-injection.md  programmatic-tool-calling.md  solve_with_agent.py  test_programmatic_tool_calling.sh
webserver/: Cargo.toml  oapi.json
webserver/src/: main.rs
webserver/src/handlers/: javascript.rs  mod.rs
(+202 files in other folders)
