[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-io"] }

# rmcp = { version = "0.1.5", }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
v8 = "136.0.0"
aws-config = "0.0.26-alpha"
aws-sdk-s3 = "0.0.26-alpha"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }