[package]
name = "server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.server]
path = ".."

# Override rmcp to use the same git source as the server crate
[patch.crates-io]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "787cc015b719773f66d4ac32e695b9a0079e12ef" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_execute_stateless"
path = "fuzz_targets/fuzz_execute_stateless.rs"
doc = false

[[bin]]
name = "fuzz_execute_stateful"
path = "fuzz_targets/fuzz_execute_stateful.rs"
doc = false

[[bin]]
name = "fuzz_snapshot_deserialization"
path = "fuzz_targets/fuzz_snapshot_deserialization.rs"
doc = false
