[package]
name = "server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }


serde = ">=1.0,<1.0.220"

[dependencies.server]
path = ".."

[dependencies.deno_core]
version = "0.381"


[patch.crates-io]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "787cc015b719773f66d4ac32e695b9a0079e12ef" }

deno_core = { git = "https://github.com/r33drichards/deno_core", rev = "1c97a0ad596fed8c258803c020194243ef4441cc" }


[workspace]
members = ["."]

[[bin]]
name = "fuzz_execute_stateless"
path = "fuzz_targets/fuzz_execute_stateless.rs"
doc = false

[[bin]]
name = "fuzz_execute_stateful"
path = "fuzz_targets/fuzz_execute_stateful.rs"
doc = false

[[bin]]
name = "fuzz_snapshot_deserialization"
path = "fuzz_targets/fuzz_snapshot_deserialization.rs"
doc = false

[[bin]]
name = "fuzz_wasm_compile"
path = "fuzz_targets/fuzz_wasm_compile.rs"
doc = false

[[bin]]
name = "fuzz_fs_operations"
path = "fuzz_targets/fuzz_fs_operations.rs"
doc = false

[[bin]]
name = "fuzz_fetch_operations"
path = "fuzz_targets/fuzz_fetch_operations.rs"
doc = false

[[bin]]
name = "fuzz_parameter_validation"
path = "fuzz_targets/fuzz_parameter_validation.rs"
doc = false

[[bin]]
name = "fuzz_module_resolution"
path = "fuzz_targets/fuzz_module_resolution.rs"
doc = false
